# duvidnn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish-test.yml  python-tests-cli-split.yml  python-tests-cli-train-bilinear.yml  python-tests-cli-train-vectome.yml  python-tests-cli-train.yml  python-tests.yml
docs/source/: conf.py  installation.md  usage.md
duvida/: __init__.py  aggregators.py  autoclass.py  base_classes.py  checkpoint_utils.py  chem.py  cli.py  hyperparameters.py
duvida-checkpoint/: metrics.csv  predict-eval-metrics.csv  predict-eval-metrics.png.csv
duvida/base/: aggregators.py  data.py  evaluation.py  information.py  modelbox_registry.py  modelboxes.py  training.py  typing.py
duvida/base/preprocessing/: __init__.py  deep_functions.py  functions.py  registry.py  serializing.py
duvida/jax/: __init__.py  hessians.py  hvp.py  nn.py
duvida/stateless/: __init__.py  config.py  hessians.py  hvp.py  information.py  typing.py  utils.py
duvida/stateless/numpy/: numpy.py
duvida/torch/: chem.py  functions.py  nn.py
duvida/torch/modelbox/: __init__.py  data.py  information.py  modelboxes.py  training.py
duvida/torch/models/: __init__.py  cnn.py  cp.py  ensemble.py  lt.py  mlp.py
duvida/torch/models/chemprop/: __init__.py  data.py  models.py
duvida/torch/models/utils/: datasets.py  ensemble.py  lt.py
duvida/utils/: datasets.py  lightning.py  plotting.py
duvida/utils/splitting/: faiss.py  plot.py
duvidnn/: __init__.py  autoclass.py  checkpoint_utils.py  cli.py
duvidnn/base/: box.py  data.py  evaluation.py  information.py  modelboxes.py  typing.py
duvidnn/base/preprocessing/: deep_functions.py  functions.py  registry.py  serializing.py
duvidnn/cli_module/: cli.py  io.py  predict.py  train.py  utils.py
duvidnn/data/: modelbox-names.json
duvidnn/torch/: __init__.py  functions.py
duvidnn/torch/modelbox/: __init__.py  data.py  information.py  modelboxes.py  training.py
duvidnn/torch/models/: __init__.py  bilinear.py  cnn.py  lasso.py  mlp.py
duvidnn/torch/models/chemprop/: data.py  models.py
duvidnn/torch/models/utils/: ensemble.py  lt.py
duvidnn/utils/: package_data.py
duvidnn/utils/splitting/: bin_packing.py  plot.py
duvidnn/xgb/modelbox/: data.py  information.py  training.py
test/: conftest.py  test_data_pipeline.py  test_evaluation.py  test_modelbox_chemprop.py  test_modelbox_mlp.py  test_output_transform.py  tests.py
test/data/: configs.json
test/scripts/: split.sh  train-hash-fp.sh  train-hash.sh  train-species.sh  train.sh
test/test/outputs/: hyperopt.json
test/test/outputs/models/fingerprint-0/: data-config.json  eval-metrics_training.json  eval-metrics_validation.json  load-data-args.json  metrics.csv  model-config.json  modelbox-init-config.json  params.pt  predictions_training.csv  predictions_validation.csv  training-args.json  training-log.csv
test/test/outputs/models/fingerprint-0/input-data.hf/: dataset_info.json  state.json
test/test/outputs/models/fingerprint-0/training-data.hf/: dataset_info.json  state.json
