[project]
name = "duvida"
version = "0.0.1"
authors = [
  { name="Eachan Johnson", email="eachan.johnson@crick.ac.uk" },
]
description = "Calculating exact and approximate confidence and information metrics for deep learning on general purpose and chemistry tasks."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
  "ai",
  "active-learning", 
  "bayesian-optimization",
  "data",
  "deep-learning",
  "machine-learning",
]

classifiers = [  
  
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "carabiner-tools[pd,mpl]>=0.0.4",
  "datasets>=2.15.0",
  "huggingface_hub",
  "numpy",
  "tqdm",
]

[project.optional-dependencies]
#tf = ["duvida", "tensorflow"]
jax = ["jax>=0.5.3"]
jax_cuda12 = ["jax[cuda12]>=0.5.3"]
jax_cuda12_local = ["jax[cuda12_local]>=0.5.3"]
torch = ["torch>=2.4", "torchvision", "lightning", "tensorboard"]
transformers = ["torch>=2.4", "torchvision", "transformers"]
chem = ["chemprop>=2.1.0", "schemist>=0.0.4.post1", "lightning", "tensorboard"]
splits = ["umap-learn", "scipy", "schemist>=0.0.4.post1", "tdigest>=0.5", "faiss-cpu>=1.11"]
splits_gpu = ["umap-learn", "scipy", "schemist>=0.0.4.post1", "tdigest>=0.5", "faiss-gpu"]

[project.urls]
"Homepage" = "https://github.com/scbirlab/duvida"
"Bug Tracker" = "https://github.com/scbirlab/duvida/issues"

[project.scripts] 
duvida = "duvida.cli:main"

[tool.setuptools]
#packages = ["duvida"]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {duvida = ["data/*.json"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[test]
deps = ["pytest>=7.4", "pytest-cov", "duvida[chem,jax,torch,transformers,splits]"] 
